--- a/index.html
+++ b/index.html
@@ -103,6 +103,22 @@
   <h1>Welcome to My English Learning Blog</h1>
   <p>This space presents my evidence in English: videos, audios, and written texts created throughout the training process.</p>
 </header>
+  
+<section style="max-width: 1000px; margin: 2rem auto; background: rgba(255,255,255,0.05); padding: 1.5rem 2rem; border-radius: 16px; box-shadow: 0 0 15px rgba(0, 207, 255, 0.2); color: #eee; font-size: 1rem; line-height: 1.6;">
+  <h2 style="color: #00cfff; margin-bottom: 1rem;">🌟 My English Learning Journey</h2>
+  <p>
+    Welcome to this space where I share my journey of learning English. Throughout this process, I have developed a variety of activities that reflect my progress in understanding, using, and producing the language — from flowcharts and written documents to videos, audios, and personal strategies for self-study.
+  </p>
+  <p>
+    This blog serves as a digital portfolio where you will find all the evidence I have worked on during my training, accompanied by descriptions, reflections, and useful resources that have enriched my experience.
+  </p>
+  <p>
+    My goal is not only to document my learning progress but also to inspire others who, like me, are starting from scratch and want to improve their English skills step by step.
+  </p>
+  <p>
+    I invite you to explore each section and be part of this academic and personal growth adventure. With consistency, creativity, and motivation, learning English is absolutely possible!
+  </p>
+</section>
 
 <main>
   <div class="card-grid">
