--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 <!-- Muñeco animado -->
 <div id="animated-character" style="position: fixed; bottom: 0; left: 5%; z-index: -1;">
-  <img src="images/character.png" alt="Character" style="width: 120px; animation: moveCharacter 5s infinite alternate ease-in-out;">
+  <img src="images/pngimg.com - deadpool_PNG91.png" alt="Character" style="width: 120px; animation: moveCharacter 5s infinite alternate ease-in-out;">
 </div>
   
 <header>
