--- a/quiz4.html
+++ b/quiz4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quiz 1 - GA1-240202501-AA1-EV01</title>
+  <title>Questionnaire 4 - GA1-240202501-AA1-EV01</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     * {
@@ -82,18 +82,18 @@
   <canvas id="background"></canvas>
 
   <header>
-    <h1>Cuestionario</h1>
+    <h1>Questionnaire</h1>
     <p>Evidence Code: GA3-240202501-AA1-EV01</p>
   </header>
 
   <main>
-    <h2>Quiz Description</h2>
+    <h2>Questionnaire Description</h2>
     <p class="content-placeholder">
-      This section includes the answers or summary of the first English quiz.
+      This section includes the answers or summary of the Forty English quiz.
     </p>
 
     <h2>Evidence Screenshot</h2>
-    <img src="images/evidence-quiz4.png" alt="Screenshot of Quiz 4 Evidence" />
+    <img src="images/evidence-quiz4.png" alt="Screenshot of Questionnaire 4 Evidence" />
 
     <a href="index.html" class="back-button">← Back to Home</a>
   </main>
