--- a/quiz1.html
+++ b/quiz1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quiz 1 - GA1-240202501-AA1-EV01</title>
+  <title>Questionnaire 1 - GA1-240202501-AA1-EV01</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     * {
@@ -82,12 +82,12 @@
   <canvas id="background"></canvas>
 
   <header>
-    <h1>Cuestionario</h1>
+    <h1>Questionnaire</h1>
     <p>Evidence Code: GA1-240202501-AA1-EV01</p>
   </header>
 
   <main>
-    <h2>Quiz Description</h2>
+    <h2>Questionnaire Description</h2>
     <p class="content-placeholder">
       This section includes the answers or summary of the first English quiz.
     </p>
