--- a/quiz1.html
+++ b/quiz1.html
@@ -115,7 +115,7 @@
     </p>
 
     <h2>Evidence Screenshot</h2>
-    <img src="images/evidence-quiz1.png" alt="Screenshot of Quiz 1 Evidence" />
+    <img src="images/evidence-quiz1.png.png" alt="Screenshot of Quiz 1 Evidence" />
 
     <a href="index.html" class="back-button">← Back to Home</a>
   </main>
